--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,49 @@
+## Default requirements
 ansible==2.8.6
-asn1crypto==0.24.0
+asn1crypto>=0.21.0
 bcrypt==3.1.7
-cffi==1.12.3
+cffi!=1.11.3,>=1.8
 cryptography==2.7
 enum34==1.1.6
 idna==2.8
 ipaddress==1.0.22
 Jinja2==2.10.1
-MarkupSafe==1.1.1
+MarkupSafe>=0.23
 paramiko==2.5.0
 pyasn1==0.4.5
 pycparser==2.19
 PyNaCl==1.3.0
 PyYAML==5.1
-six==1.12.0
+six>=1.4.1
+# pyparsing>=2.0.2
+# urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1
+# chardet<3.1.0,>=3.0.2
+# certifi>=2017.4.17
+# idna<2.9,>=2.5
+# jmespath==0.9.4
+# colorama>=0.3.9
+# paramiko==2.5.0
+
+## misc explicit needs
+appdirs==1.4.3
+netaddr==0.7.19
+requests==2.22.0
+wheel==0.30.0
 
 ## Azure
 ansible[azure]
-# jinja2
-# PyYAML
-# cryptography
-# packaging
+packaging==19.0
 # requests[security]
+pyOpenSSL>=0.14; extra == "security" #(from requests[security]->ansible[azure])
+
 azure-cli-core==2.0.35 #(from ansible[azure])
+argcomplete>=1.8.0 ##(from azure-cli-core==2.0.35->ansible[azure])
+applicationinsights>=0.11.1 #(from azure-cli-core==2.0.35->ansible[azure])
+humanfriendly>=4.7 ##(from azure-cli-core==2.0.35->ansible[azure])
+knack==0.3.3 #(from azure-cli-core==2.0.35->ansible[azure])
+pygments #(from azure-cli-core==2.0.35->ansible[azure])
+tabulate<=0.8.2,>=0.7.7 #(from azure-cli-core==2.0.35->ansible[azure])
+
 azure-cli-nspkg==3.0.2 #(from ansible[azure])
 azure-common==1.1.11 #(from ansible[azure])
 azure-mgmt-authorization==0.51.1 #(from ansible[azure])
@@ -56,50 +77,8 @@ azure-mgmt-cosmosdb==0.5.2 #(from ansible[azure])
 azure-mgmt-hdinsight==0.1.0 #(from ansible[azure])
 azure-mgmt-devtestlabs==3.0.0 #(from ansible[azure])
 azure-mgmt-loganalytics==0.2.0 #(from ansible[azure])
-# MarkupSafe>=0.23
-# cffi!=1.11.3,>=1.8
-# six>=1.4.1
-# asn1crypto>=0.21.0
-# pyparsing>=2.0.2
-# urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1
-# chardet<3.1.0,>=3.0.2
-# certifi>=2017.4.17
-# idna<2.9,>=2.5
-pyOpenSSL>=0.14; extra == "security" #(from requests[security]->ansible[azure])
-# jmespath==0.9.4
-tabulate<=0.8.2,>=0.7.7 #(from azure-cli-core==2.0.35->ansible[azure])
-knack==0.3.3 #(from azure-cli-core==2.0.35->ansible[azure])
-pygments #(from azure-cli-core==2.0.35->ansible[azure])
-# colorama>=0.3.9
-# wheel==0.30.0
-argcomplete>=1.8.0 ##(from azure-cli-core==2.0.35->ansible[azure])
-# paramiko==2.5.0
-humanfriendly>=4.7 ##(from azure-cli-core==2.0.35->ansible[azure])
-applicationinsights>=0.11.1 #(from azure-cli-core==2.0.35->ansible[azure])
-# PyJWT==1.7.1
-# python-dateutil==2.8.0
-# isodate>=0.6.0
-# requests-oauthlib>=0.5.0
-# adal<2.0.0,>=0.6.0
-# pycparser==2.19
-# pynacl>=1.0.1
-# bcrypt>=3.1.3
-# oauthlib>=3.0.0
 
 ## PaloAlto
 pan-python==0.15.0
 pandevice==0.12.0
 xmltodict==0.12.0
-
-## AWS
-awscli==1.16.183
-boto==2.49.0
-boto3==1.9.173
-botocore==1.12.173
-
-## misc explicit needs
-appdirs==1.4.3
-netaddr==0.7.19
-packaging==19.0
-requests==2.22.0
-wheel==0.30.0
