--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ ansible==2.8.8
 asn1crypto>=0.21.0
 bcrypt==3.1.7
 cffi!=1.11.3,>=1.8
-cryptography==2.7
+cryptography>=3.2
 enum34==1.1.6
 idna==2.8
 ipaddress==1.0.22
-Jinja2==2.10.1
+Jinja2==2.11.3
 MarkupSafe>=0.23
 paramiko==2.5.0
 pyasn1==0.4.5
