--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,55 @@
 ## Default requirements
-ansible==2.8.8
-asn1crypto>=0.21.0
-bcrypt==3.1.7
-cffi!=1.11.3,>=1.8
-cryptography>=3.2
-enum34==1.1.6
-idna==2.8
-ipaddress==1.0.22
-Jinja2==2.11.3
-MarkupSafe>=0.23
-paramiko==2.5.0
-pyasn1==0.4.5
-pycparser==2.19
-PyNaCl==1.3.0
-PyYAML==5.4
-six>=1.4.1
-# pyparsing>=2.0.2
-# urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1
-# chardet<3.1.0,>=3.0.2
-# certifi>=2017.4.17
-# idna<2.9,>=2.5
-# jmespath==0.9.4
-# colorama>=0.3.9
-# paramiko==2.5.0
+ansible[azure]>2.9,<2.10
+asn1crypto==1.4.0
+bcrypt==3.2.0
+cffi==1.15.0
+#cffi!=1.11.3
+cryptography==36.0.1
+enum34==1.1.10
+idna==3.3
+ipaddress==1.0.23
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+paramiko==2.8.1
+pyasn1==0.4.8
+pycparser==2.21
+PyNaCl==1.4.0
+PyYAML==6.0
+six==1.16.0
+tabulate==0.8.2
+urllib3==1.26.7
+
+oauthlib==3.1.1
+packaging==21.3
+Pygments==2.10.0
+pyparsing==3.0.6
+python-dateutil==2.8.2
+humanfriendly==10.0
+PyJWT==2.3.0
+charset-normalizer==2.0.9
+certifi==2021.10.8
+argcomplete==1.12.3
+applicationinsights==0.11.10
+adal==1.2.7
+colorama==0.4.4
+
 
 ## misc explicit needs
-appdirs==1.4.3
-netaddr==0.7.19
-requests==2.22.0
-wheel==0.30.0
+appdirs==1.4.4
+netaddr==0.8.0
+wheel
 
 ## Azure
-ansible[azure]
-packaging==19.0
+azure-storage-common==1.4.2
+packaging==21.3
 # requests[security]
-pyOpenSSL>=0.14; extra == "security" #(from requests[security]->ansible[azure])
-
-azure-cli-core==2.0.35 #(from ansible[azure])
-argcomplete>=1.8.0 ##(from azure-cli-core==2.0.35->ansible[azure])
-applicationinsights>=0.11.1 #(from azure-cli-core==2.0.35->ansible[azure])
-humanfriendly>=4.7 ##(from azure-cli-core==2.0.35->ansible[azure])
-knack==0.3.3 #(from azure-cli-core==2.0.35->ansible[azure])
-pygments #(from azure-cli-core==2.0.35->ansible[azure])
-tabulate<=0.8.2,>=0.7.7 #(from azure-cli-core==2.0.35->ansible[azure])
-
-azure-cli-nspkg==3.0.2 #(from ansible[azure])
-azure-common==1.1.11 #(from ansible[azure])
-azure-mgmt-authorization==0.51.1 #(from ansible[azure])
-azure-mgmt-batch==5.0.1 #(from ansible[azure])
-azure-mgmt-cdn==3.0.0 #(from ansible[azure])
-azure-mgmt-compute==4.4.0 #(from ansible[azure])
-azure-mgmt-containerinstance==1.4.0 #(from ansible[azure])
-azure-mgmt-containerregistry==2.0.0 #(from ansible[azure])
-azure-mgmt-containerservice==4.4.0 #(from ansible[azure])
-azure-mgmt-dns==2.1.0 #(from ansible[azure])
-azure-mgmt-keyvault==1.1.0 #(from ansible[azure])
-azure-mgmt-marketplaceordering==0.1.0 #(from ansible[azure])
-azure-mgmt-monitor==0.5.2 #(from ansible[azure])
-azure-mgmt-network==2.3.0 #(from ansible[azure])
-azure-mgmt-nspkg==2.0.0 #(from ansible[azure])
-azure-mgmt-redis==5.0.0 #(from ansible[azure])
-azure-mgmt-resource==2.1.0 #(from ansible[azure])
-azure-mgmt-rdbms==1.4.1 #(from ansible[azure])
-azure-mgmt-servicebus==0.5.3 #(from ansible[azure])
-azure-mgmt-sql==0.10.0 #(from ansible[azure])
-azure-mgmt-storage==3.1.0 #(from ansible[azure])
-azure-mgmt-trafficmanager==0.50.0 #(from ansible[azure])
-azure-mgmt-web==0.41.0 #(from ansible[azure])
-azure-nspkg==2.0.0 #(from ansible[azure])
-azure-storage==0.35.1 #(from ansible[azure])
-msrest==0.6.1 #(from ansible[azure])
-msrestazure==0.5.0 #(from ansible[azure])
-azure-keyvault==1.0.0a1 #(from ansible[azure])
-azure-graphrbac==0.40.0 #(from ansible[azure])
-azure-mgmt-cosmosdb==0.5.2 #(from ansible[azure])
-azure-mgmt-hdinsight==0.1.0 #(from ansible[azure])
-azure-mgmt-devtestlabs==3.0.0 #(from ansible[azure])
-azure-mgmt-loganalytics==0.2.0 #(from ansible[azure])
+requests==2.26.0
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+pyOpenSSL==21.0.0
 
 ## PaloAlto
-pan-python==0.15.0
-pandevice==0.12.0
 xmltodict==0.12.0
+pandevice==0.14.0
+pan-python==0.16.0
+pan-os-python==1.6.0
